--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Notes on 🔥base and React</title>
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
